--- a/css/art.css
+++ b/css/art.css
@@ -1,17 +1,12 @@
-
 #art-container {
     display: flex;
 }
 
 #art-left-master {
-    width: 45vw;
-    background-color: red;
+    block-size: fit-content;
 }
 
 #art-right-master {
-    width: 50vw;
-    background-color: aquamarine;
-
     display: flex;
     flex-direction: column;
 }
@@ -27,8 +22,15 @@
     object-fit: cover;
 }
 
+.art-right-container-image {
+    margin: 0 auto;
+}
+
 .art-right-image {
     width: 100%;
+    height: 100%;
 
+    object-fit: cover;
     flex: 0 0 auto;
+    display: block;
 }
