--- a/css/info.css
+++ b/css/info.css
@@ -1,5 +1,4 @@
 #info-container {
-    width: 95vw;
     height: 100vh;
     position: fixed;
 
@@ -9,39 +8,82 @@
 }
 
 #info-image-container {
-    width: 45vw;
     height: 100vh;
-
-    background-color: aqua;
 }
 
-.info-image-one {
+.info-image-divider-container {
     width: 100%;
-    height: 20%;
+    height: 50%;
 
-    object-fit: cover;
+    display: flex;
+    align-items: center;
 }
-.info-image-two {
-    width: 100%;
-    height: 20%;
 
+.info-image-one, .info-image-two {
     object-fit: cover;
+    margin: 0 auto 0 auto;
+    margin-top: 2;
 }
 
 #info-text-container {
-    width: 50vw;
-}
+    padding: var(--spacing-size-s);
 
-#info-facts-container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    gap: var(--spacing-size-m);
 }
-
 #info-container-top {
-    display: flex;
+    margin-bottom: var(--spacing-size-m);
 }
 
-#info-container-bot {
+#info-container-top, #info-container-bot {
+    width: 100%;
     display: flex;
+
+    justify-content: space-between;
+}
+
+#info-container-exhibitions, #info-container-client, #info-container-publications, #info-container-studies {
+    width: 50%;
+}
+
+#info-headline-exhibitions, #info-headline-client, #info-headline-publications, #info-headline-studies {
+    margin-bottom: var(--spacing-size-s);
+}
+
+/* ACCORDION */
+
+.info-accordion {
+    background-color: transparent;
+
+    padding-top: var(--spacing-size-s);
+    padding-bottom: var(--spacing-size-s);
+    padding-right: var(--spacing-size-l);
+
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.info-accordion:after {
+    content: '\002B'; /* Unicode character for "plus" sign (+) */
+}
+
+.info-accordion-active:after {
+    content: "\002D"; /* Unicode character for "minus" sign (-) */
+}
+
+.info-accordion-active, .info-accordion:hover {
+    background-color: transparent;
+}
+
+.info-panel {
+    background-color: transparent;
+    display: none;
+    overflow: hidden;
 }
