--- a/css/general.css
+++ b/css/general.css
@@ -6,15 +6,22 @@
     scrollbar-width: none;
     box-sizing: border-box;
 
-    cursor: cell;
+    cursor: default;
 }
 
-html, body {
-    font-size: 9px;
-    font-family: var(--font);
+*::selection {
+    background: var(--black);
+}
+
+html, body, button {
+    font-size: 10px;
+    font-family: var(--font), sans-serif;
+    letter-spacing: 0.2px;
 
     text-transform: uppercase;
 }
+
+
 
 :root {
     /* COLORS */
@@ -30,9 +37,11 @@ html, body {
     --font: 'Poppins', sans-serif;
 
     /* FONT SIZE*/
-    --font-size-s: 0.8rem;
+    --font-size-xs: 0.75rem;
+    --font-size-s: 0.9rem;
     --font-size-m: 1rem;
     --font-size-l: 1.2rem;
+    --font-size-xl: 1.3rem;
 }
 
 a {
@@ -47,3 +56,15 @@ a {
     pointer-events: none;
     position: absolute;
 }
+
+/* SIZING */
+#art-container, #info-container, .com-section {
+    width: 97vw;
+}
+#art-left-master, #info-text-container, .com-master {
+    width: 47%;
+}
+#art-right-master, #info-image-container, .com-container-text {
+    width: 53%;
+}
+/* SIZING */
