--- a/css/nav.css
+++ b/css/nav.css
@@ -1,12 +1,14 @@
 .nav-master {
     height: 100vh;
-    width: 5vw;
-    background-color: red;
+    width: 3vw;
+    background-color: white;
 
     position: fixed;
     right: 0;
 
     padding-top: 5vh;
+
+    font-size: var(--font-size-xs);
 }
 
 .nav-container {
@@ -20,19 +22,34 @@
 .nav-element {
     writing-mode: vertical-lr;
     margin: 0 auto;
+
+    opacity: 0;
+}
+
+.nav-element::selection, #nav-diary > a::selection {
+    background: none;
 }
 
 .nav-off {
     opacity: 0;
     pointer-events: none;
+    visibility: hidden;
 }
 
+.nav-on {
+    opacity: 1;
+    pointer-events: auto;
+}
 
 #nav-louise {
-    height: 14ch;
+    height: 16ch;
+}
+
+#nav-art {
+    height: 6ch;
 }
 
 #nav-cata {
-    opacity: 0;
+    opacity: 0 !important;
     pointer-events: none;
 }
